<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#87ceeb"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"

        android:textSize="16dp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/author"
        android:paddingBottom="8dp"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/achievement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Achievement"
        android:textSize="24dp"
        android:background="#fff" />

    <ImageView
        android:id="@+id/ene"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingVertical="8dp"
        app:srcCompat="@drawable/enemy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/rock"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/rock" />

        <ImageView
            android:id="@+id/scissors"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/scissors" />

        <ImageView
            android:id="@+id/paper"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/paper" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/winNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/winNum" />

        <TextView
            android:id="@+id/win"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/win" />

        <TextView
            android:id="@+id/loseNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/loseNum" />

        <TextView
            android:id="@+id/lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/lose" />

        <TextView
            android:id="@+id/drawNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/drawNum" />

        <TextView
            android:id="@+id/draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/draw" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingHorizontal="30dp">

        <Button
            android:id="@+id/reset"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/reset" />

        <Button
            android:id="@+id/back"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/language" />

    </LinearLayout>

</LinearLayout>
